--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /PS1-rmi.iml
 /PS2-rmi.iml
 /PS3-soap.iml
-/PS4-glassfish.iml
+/PS4-soap.iml
 
 #Projects excluded paths
 /PS1-rmi/.gradle/
@@ -16,5 +16,5 @@
 /PS3-soap/.gradle/
 /PS3-soap/build/
 
-/PS4-glassfish/.gradle/
-/PS4-glassfish/build/
+/PS4-soap/.gradle/
+/PS4-soap/build/
