--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /PS2-rmi.iml
 /PS3-soap.iml
 /PS4-soap.iml
+/PS5-soap.iml
 
 #Projects excluded paths
 /PS1-rmi/.gradle/
@@ -21,3 +22,7 @@
 /PS4-soap/CSharpClient/.idea/
 /PS4-soap/CSharpClient/CSharpClient/bin/
 /PS4-soap/CSharpClient/CSharpClient/obj/
+/PS4-soap/PythonClient/venv/
+
+/PS5-soap/.gradle/
+/PS5-soap/build/
